# mimir-frontend

./: .gitignore  .gitmodules  AGENTS.md  README.md  dynamic_shape.md  operator_gemini_impl_summary.md  operators_summary.md  pyproject.toml  shape_invariants.md
docs/: kernelbench_level3_report.md
examples/: readme.md
examples/mim/: lenet.mim  tiny_rnn.mim
examples/py/: attention.py  lenet.py  lstm.py  mlp.py  rnn.py
models/mim/: classic_mlp.mim  tiny_attention.mim  tiny_lstm.mim
models/py/: attention.py  lenet.py  lstm.py  mlp.py  rnn.py
scripts/: bootstrap_mimir.sh  dump_inductor_mimir.py  export_models_to_mimir.py  report_kernelbench_level3.py
src/mimir_frontend/: backend.py  expr.py  inductor_readable.py  model_export.py  operators.py  shape_rules.py  translator.py  utils.py
src/mimir_frontend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: check_fx.py  draft_compile.py  draft_cps.mim  draft_cps.py  draft_expand.py  draft_full.py  draft_monkey.py  draft_ops_end.py  explore.py  test_basic.py  test_inductor_readable.py  test_model_export.py  test_module_gen.py  test_real_inductor_graphs.py  test_shape.py  test_torch_compile_backend.py  test_utils.py
